Prepare to 2.5.0 release